/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric-x-committer/api/protosigverifierservice";

package protosigverifierservice;

import "api/protoblocktx/block_tx.proto";

service Verifier {
    rpc StartStream(stream RequestBatch) returns (stream ResponseBatch);
}

message RequestBatch {
    optional Update update = 1;
    repeated Request requests = 2;
}

message Update {
    optional protoblocktx.ConfigTransaction config = 1;
    optional protoblocktx.NamespacePolicies namespace_policies = 2;
}

message Request {
    uint64 block_num  = 1;
    uint64 tx_num = 2;
    protoblocktx.Tx tx = 3;
}

message Response {
    uint64 block_num  = 1;
    uint64 tx_num = 2;
    string tx_id = 3;
    protoblocktx.Status status = 4;
}

message ResponseBatch {
    repeated Response responses = 1;
}
